Fix border radius for when focus state is collapsed

--- a/scss/components/card.scss
+++ b/scss/components/card.scss
@@ -199,13 +199,18 @@ label.card__primary-action {
 	}
 
 	.card__expand-status:focus ~ .card__actions & {
-		border-radius: $card-border-radius;
 		box-shadow: $box-shadow-focus-inset;
 
 		&:active,
 		&:hover {
 			box-shadow: none;
 		}
+	}
+
+	.card--expandable .card__expand-status:checked ~ .card__actions &,
+	.card--expandable.is-expanded & {
+		border-bottom-right-radius: 0; // NOTE: Remove bottom radius when details are visible to fix focus ring
+		border-bottom-left-radius: 0; // NOTE: Remove bottom radius when details are visible to fix focus ring
 	}
 }
 
